Enh: renamed component to wazo_router_call_logd

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ whitelist_externals =
 [testenv:pycodestyle]
 # E501: line too long (80 chars)
 commands =
-    -sh -c 'pycodestyle --ignore=E501 wazo_router_calld > pycodestyle.txt'
+    -sh -c 'pycodestyle --ignore=E501 wazo_router_call_logd > pycodestyle.txt'
 deps =
     -rrequirements.txt
 whitelist_externals =
@@ -27,7 +27,7 @@ whitelist_externals =
 
 [testenv:pylint]
 commands =
-    -sh -c 'pylint --rcfile=/usr/share/xivo-ci/pylintrc wazo_router_calld > pylint.txt'
+    -sh -c 'pylint --rcfile=/usr/share/xivo-ci/pylintrc wazo_router_call_logd > pylint.txt'
 deps =
     -rrequirements.txt
 whitelist_externals =
@@ -35,9 +35,9 @@ whitelist_externals =
 
 [testenv:linters]
 commands =
-  black --skip-string-normalization --check wazo_router_calld
-  mypy wazo_router_calld
-  flake8 wazo_router_calld
+  black --skip-string-normalization --check wazo_router_call_logd
+  mypy wazo_router_call_logd
+  flake8 wazo_router_call_logd
 deps =
     -r requirements.txt
 
@@ -53,4 +53,4 @@ exclude = .tox,.eggs,alembic
 show-source = true
 ignore = E501, W503
 max-line-length = 99
-application-import-names = wazo_router_calld
+application-import-names = wazo_router_call_logd
