--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: wazo-router-calld
+Source: wazo-router-call_logd
 Section: python
 Priority: extra
 Maintainer: Wazo Maintainers <dev@wazo.community>
@@ -11,7 +11,7 @@ Build-Depends:
 Standards-Version: 3.9.6
 X-Python-Version: >= 3.5
 
-Package: wazo-router-calld
+Package: wazo-router-call_logd
 Architecture: all
 Depends:
  ${python3:Depends},
