--- a/debian/wazo-router-call-logd.service
+++ b/debian/wazo-router-call-logd.service
@@ -5,7 +5,7 @@ Before=monit.service
 
 [Service]
 ExecStartPre=/usr/bin/install -d -o www-data -g www-data /var/run/wazo-router-call-logd
-ExecStart=/usr/bin/wazo-router-call-logd
+ExecStart=/usr/bin/wazo-router-call-logd --config-file=/etc/wazo/wazo-router-call-logd.ini
 PIDFile=/var/run/wazo-router-call-logd/wazo-router-call-logd.pid
 
 [Install]
