--- a/debian/control
+++ b/debian/control
@@ -1,22 +1,15 @@
 Source: wazo-router-call-logd
 Section: python
 Priority: extra
-Maintainer: Wazo Maintainers <dev@wazo.community>
-Build-Depends:
- debhelper (>= 9),
- dh-python,
- dh-systemd (>= 1.5),
- python3-all,
- python3-setuptools
+Maintainer: Wazo Maintainers <dev+pkg@wazo.community>
+Build-Depends: debhelper (>= 11), dh-virtualenv, python3-all, python3-dev, python3-setuptools, libhttp-parser-dev
 Standards-Version: 3.9.6
-X-Python-Version: >= 3.5
+X-Python3-Version: >= 3.7
 
 Package: wazo-router-call-logd
-Architecture: all
-Depends:
- ${python3:Depends},
- ${misc:Depends}
+Architecture: any
+Pre-Depends: dpkg (>= 1.16.1), python3.7, ${misc:Pre-Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Wazo call server for C4 infrastructure
  Wazo is a system based on a powerful IPBX, to bring an easy to
  install solution for telephony and related services.
- .
