--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,15 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-export PYBUILD_NAME=wazo-router-call_logd
+export PYBUILD_NAME=wazo-router-call-logd
 export PYBUILD_DISABLE=test
 
 %:
-	dh $@ --with python3,systemd --buildsystem=pybuild
+    dh $@ --with python-virtualenv --buildsystem=pybuild
+
+override_dh_virtualenv:
+    dh_virtualenv \
+        --python=python3 \
+        --setuptools \
+        --extras=undirect_deps
+        # --verbose
