--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,18 @@ Source: wazo-router-call-logd
 Section: python
 Priority: extra
 Maintainer: Wazo Maintainers <dev+pkg@wazo.community>
-Build-Depends: debhelper (>= 11), dh-virtualenv, python3-all, python3-dev, python3-setuptools, libhttp-parser-dev
+Build-Depends: debhelper (>= 11), python3-all, python3-dev, python3-setuptools
 Standards-Version: 3.9.6
 X-Python3-Version: >= 3.7
 
 Package: wazo-router-call-logd
-Architecture: any
-Pre-Depends: dpkg (>= 1.16.1), python3.7, ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: all
+Depends: ${python3:Depends}, ${misc:Depends}, ${shlibs:Depends},
+ python3-click,
+ python3-consul,
+ python3-kombu,
+ python3-requests
 Description: Wazo call server for C4 infrastructure
  Wazo is a system based on a powerful IPBX, to bring an easy to
  install solution for telephony and related services.
+ .
