--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: wazo-router-call-logd
 Section: python
-Priority: extra
+Priority: optional
 Maintainer: Wazo Maintainers <dev+pkg@wazo.community>
 Build-Depends: debhelper (>= 11), python3-all, python3-dev, python3-setuptools
 Standards-Version: 3.9.6
