--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ filelock==3.0.12
 flake8==3.7.8
 flake8-colors==0.1.6
 idna==2.8
-importlib-metadata==0.23
+importlib_metadata==1.6.0  # from kombu
 isort==4.3.21
 kombu==4.6.11
 lazy-object-proxy==1.4.2
